@@ -15,6 +15,7 @@ import de.monticore.codegen.cd2java._ast.ast_class.ASTConstants;
 import de.monticore.codegen.cd2java._symboltable.SymbolTableService;
 import de.monticore.codegen.cd2java._visitor.VisitorConstants;
 import de.monticore.codegen.cd2java._visitor.VisitorService;
+import de.monticore.codegen.cd2java.methods.AccessAsSupplierTypes;
 import de.monticore.codegen.cd2java.methods.MethodDecorator;
 import de.monticore.generating.templateengine.GlobalExtensionManagement;
 import de.monticore.generating.templateengine.StringHookPoint;
@@ -93,7 +94,10 @@ public class ScopeInterfaceDecorator extends AbstractDecorator {
             .map(ASTCDClass::getCDAttributeList)
             .flatMap(List::stream)
             .map(ASTCDAttribute::deepClone)
-            .toList();
+            .collect(Collectors.toList());
+    scopeRuleAttributes.stream()
+        .filter(AccessAsSupplierTypes::shouldHaveSupplier)
+        .forEach(a -> a.setMCType(getDecorationHelper().createInternalSupplierTypeOf(a.getMCType())));
 
     List<ASTCDMethod> scopeRuleMethodList = scopeInput.deepClone().getCDDefinition().getCDClassesList()
             .stream()
